# OpenSheet

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  README_BUILD.md  build.bat  build.sh
.github/workflows/: build.yml  release.yml
app/: CellDelegate.cpp  FormulaBar.cpp  FormulaBar.h  MainWindow.cpp  MainWindow.h  NotifBar.cpp  NotifBar.h  SheetTabBar.cpp  SheetTabBar.h  SpreadsheetView.cpp  SpreadsheetView.h  StatusBar.cpp  StatusBar.h  main.cpp
core/: Cell.cpp  Cell.h  CsvLoader.cpp  CsvLoader.h  FormulaEngine.cpp  FormulaEngine.h  Sheet.cpp  Sheet.h  UndoStack.cpp  UndoStack.h  Workbook.cpp  Workbook.h
installer/: OpenSheetET.nsi
ui/: ColorButton.cpp  ColorButton.h  CondFmtDialog.cpp  CondFmtDialog.h  FindReplaceDialog.cpp  FindReplaceDialog.h  FormatCellsDialog.cpp  FormatCellsDialog.h  FunctionWizard.cpp  FunctionWizard.h  RibbonWidget.cpp  RibbonWidget.h  Theme.h
